[package]
name = "count-md"
version = "0.2.0"
edition = "2021"
license = "BlueOak-1.0.0"
description = "A simple, configurable command-line tool and Rust library for Unicode-aware, Markdown-aware, HTML-aware word counting in Markdown documents"
authors = ["Chris Krycho <hello@chriskrycho.com>"]
repository = "https://github.com/chriskrycho/count-md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Library dependencies
[dependencies]
bitflags = "2.5.0"
pulldown-cmark = { version = "0.13", features = ["simd"] }
unicode-segmentation = "1.11.0"
xmlparser = "0.13.6"

# Binary dependencies
[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.clap_complete]
version = "4"
optional = true

[dependencies.rayon]
version = "1.10.0"
optional = true

[dependencies.thiserror]
version = "1.0.61"
optional = true

# Default features for the binary
[features]
cli = ["clap", "clap_complete", "rayon", "thiserror"]

[[bin]]
name = "count-md"
path = "src/main.rs"
required-features = ["cli"]
